crates/nash-report/tests/can/snapshots/can__kinds__self_application_fails_before_partial_constructor_use.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 841
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype self 'f = Self ('f 'f)\ntype p 'f 'a = P ('f 'f) 'a\ntype tag 'a = Tag\ntype w = W (tag (p self))\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `Self` in `self` would require
  │ an infinite kind:
   ╭─[src/Main.nash:5:25]
 4 │ 
 5 │ type self 'f = Self ('f 'f)
   ·                         ──
 6 │ type p 'f 'a = P ('f 'f) 'a
   ╰────
  help: Check the type application and the kinds of its arguments.

nash::names::kind_infinite

  × This application in field 1 of little constructor `P` in `p` would require an
  │ infinite kind:
   ╭─[src/Main.nash:6:22]
 5 │ type self 'f = Self ('f 'f)
 6 │ type p 'f 'a = P ('f 'f) 'a
   ·                      ──
 7 │ type tag 'a = Tag
   ╰────
  help: Check the type application and the kinds of its arguments.
