crates/nash-report/tests/can/snapshots/can__kinds__self_application_is_rejected_at_declaration.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 692
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype self 'f = Self ('f 'f)\ntype w = W (self self)\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `Self` in `self` would require
  │ an infinite kind:
   ╭─[src/Main.nash:5:25]
 4 │ 
 5 │ type self 'f = Self ('f 'f)
   ·                         ──
 6 │ type w = W (self self)
   ╰────
  help: Check the type application and the kinds of its arguments.
