crates/nash-report/tests/can/snapshots/can__kinds__ternary_self_application_fails_before_impl_head_checking.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 789
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'f 'a))\ntrait Marker 'a where\n    marker : 'a -> unit\nimpl Marker (s s tag tag) where\n    marker _ = ()\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `S` in `s` would require an
  │ infinite kind:
   ╭─[src/Main.nash:6:29]
 5 │ type tag 'a = Tag
 6 │ type s 'f 'g 'a = S ('g ('f 'f 'a))
   ·                             ──
 7 │ trait Marker 'a where
   ╰────
  help: Check the type application and the kinds of its arguments.
